trunk/Archive2/23/138186d0200983/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:22:8: error: expected constructor, destructor, or type conversion before ‘(’ token
 system ("pause")
        ^
